// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObsSocketSettings matches snapshot when obs socket is disabled 1`] = `
"<div>
  <div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
    <div class=\\"title\\">OBS Socket</div>
    <div class=\\"ipl-toggle__container\\" data-v-1befd81e=\\"\\">
      <div class=\\"ipl-toggle__text\\" data-v-1befd81e=\\"\\"><span class=\\"true-option\\" data-v-1befd81e=\\"\\">Enable</span><span class=\\"false-option selected\\" data-v-1befd81e=\\"\\">Disable</span></div>
      <div class=\\"ipl-toggle__button\\" data-v-1befd81e=\\"\\"></div>
    </div>
  </div>
  <div class=\\"ipl-message__wrapper layout horizontal center-vertical ipl-message__type-info m-t-8\\" data-v-5541e800=\\"\\">
    <font-awesome-icon-stub icon=\\"info-circle\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"icon\\" data-v-5541e800=\\"\\"></font-awesome-icon-stub>
    <div class=\\"message-content\\" data-v-5541e800=\\"\\">
      <!----> OBS websocket is disabled.
    </div>
  </div>
</div>"
`;

exports[`ObsSocketSettings matches snapshot when status is CONNECTED 1`] = `
"<div>
  <div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
    <div class=\\"title\\">OBS Socket</div>
    <div class=\\"ipl-toggle__container\\" data-v-1befd81e=\\"\\">
      <div class=\\"ipl-toggle__text\\" data-v-1befd81e=\\"\\"><span class=\\"true-option selected\\" data-v-1befd81e=\\"\\">Enable</span><span class=\\"false-option\\" data-v-1befd81e=\\"\\">Disable</span></div>
      <div class=\\"ipl-toggle__button is-true\\" data-v-1befd81e=\\"\\"></div>
    </div>
  </div>
  <div class=\\"ipl-space color-dark m-t-8\\" data-v-11cc5f1c=\\"\\">
    <ipl-input-stub name=\\"socketUrl\\" label=\\"Socket address\\" modelvalue=\\"localhost:4444\\" type=\\"text\\" centered=\\"false\\" disabled=\\"false\\"></ipl-input-stub>
    <ipl-input-stub name=\\"password\\" label=\\"Password (Optional)\\" modelvalue=\\"pwd\\" type=\\"password\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-t-4\\"></ipl-input-stub>
    <ipl-button-stub label=\\"Connect\\" color=\\"blue\\" disabled=\\"false\\" async=\\"true\\" progressmessage=\\"Connecting...\\" successmessage=\\"Connected!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" class=\\"m-t-8\\" data-test=\\"socket-connect-button\\" title=\\"Right-click to undo changes.\\"></ipl-button-stub>
    <div class=\\"ipl-space color-dark text-center m-t-8 text-semibold rounded-inner obs-status_CONNECTED\\" data-v-11cc5f1c=\\"\\">Connected</div>
  </div>
</div>"
`;

exports[`ObsSocketSettings matches snapshot when status is CONNECTING 1`] = `
"<div>
  <div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
    <div class=\\"title\\">OBS Socket</div>
    <div class=\\"ipl-toggle__container\\" data-v-1befd81e=\\"\\">
      <div class=\\"ipl-toggle__text\\" data-v-1befd81e=\\"\\"><span class=\\"true-option selected\\" data-v-1befd81e=\\"\\">Enable</span><span class=\\"false-option\\" data-v-1befd81e=\\"\\">Disable</span></div>
      <div class=\\"ipl-toggle__button is-true\\" data-v-1befd81e=\\"\\"></div>
    </div>
  </div>
  <div class=\\"ipl-space color-dark m-t-8\\" data-v-11cc5f1c=\\"\\">
    <ipl-input-stub name=\\"socketUrl\\" label=\\"Socket address\\" modelvalue=\\"localhost:4444\\" type=\\"text\\" centered=\\"false\\" disabled=\\"false\\"></ipl-input-stub>
    <ipl-input-stub name=\\"password\\" label=\\"Password (Optional)\\" modelvalue=\\"pwd\\" type=\\"password\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-t-4\\"></ipl-input-stub>
    <ipl-button-stub label=\\"Connect\\" color=\\"blue\\" disabled=\\"false\\" async=\\"true\\" progressmessage=\\"Connecting...\\" successmessage=\\"Connected!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" class=\\"m-t-8\\" data-test=\\"socket-connect-button\\" title=\\"Right-click to undo changes.\\"></ipl-button-stub>
    <div class=\\"ipl-space color-dark text-center m-t-8 text-semibold rounded-inner obs-status_CONNECTING\\" data-v-11cc5f1c=\\"\\">Connecting</div>
  </div>
</div>"
`;

exports[`ObsSocketSettings matches snapshot when status is NOT_CONNECTED 1`] = `
"<div>
  <div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
    <div class=\\"title\\">OBS Socket</div>
    <div class=\\"ipl-toggle__container\\" data-v-1befd81e=\\"\\">
      <div class=\\"ipl-toggle__text\\" data-v-1befd81e=\\"\\"><span class=\\"true-option selected\\" data-v-1befd81e=\\"\\">Enable</span><span class=\\"false-option\\" data-v-1befd81e=\\"\\">Disable</span></div>
      <div class=\\"ipl-toggle__button is-true\\" data-v-1befd81e=\\"\\"></div>
    </div>
  </div>
  <div class=\\"ipl-space color-dark m-t-8\\" data-v-11cc5f1c=\\"\\">
    <ipl-input-stub name=\\"socketUrl\\" label=\\"Socket address\\" modelvalue=\\"localhost:4444\\" type=\\"text\\" centered=\\"false\\" disabled=\\"false\\"></ipl-input-stub>
    <ipl-input-stub name=\\"password\\" label=\\"Password (Optional)\\" modelvalue=\\"pwd\\" type=\\"password\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-t-4\\"></ipl-input-stub>
    <ipl-button-stub label=\\"Connect\\" color=\\"blue\\" disabled=\\"false\\" async=\\"true\\" progressmessage=\\"Connecting...\\" successmessage=\\"Connected!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" class=\\"m-t-8\\" data-test=\\"socket-connect-button\\" title=\\"Right-click to undo changes.\\"></ipl-button-stub>
    <div class=\\"ipl-space color-dark text-center m-t-8 text-semibold rounded-inner obs-status_NOT_CONNECTED\\" data-v-11cc5f1c=\\"\\">Not connected</div>
  </div>
</div>"
`;
